Minor update: added title/credit

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 </head>
 <body>
     <div class="top">
+        <div class="title-cont">
+            <a class="title-link" href="https://github.com/tomcodedthis" target="_blank">
+                <h5 class="title w-text">How's The Weather</h5>
+                <h5 class="w-text">@tomcodedthis</h5>
+            </a>
+        </div>
         <form method="get">
             <input type="text" class="search-input" placeholder="Search your location...">
             <button type="submit" class="search-btn"><i class="fa-solid fa-search"></i></button>
