--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Weather</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./favicon.ico">
 
     <script defer rel="text/javascript" src="script.js"></script>
     <script
