Update: More responsive

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 <body>
     <div class="top">
         <div class="title-cont">
+            <a class="title-link" href="./index.html">
+                <h3 class="title w-text">How's The Weather</h3>
+            </a>
             <a class="title-link" href="https://github.com/tomcodedthis" target="_blank">
-                <h5 class="title w-text">How's The Weather</h5>
-                <h5 class="w-text">@tomcodedthis</h5>
+                <h3 class="w-text">@tomcodedthis</h3>
             </a>
         </div>
         <form method="get">
